--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
+altair==6.0.0
+annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
 attrs==25.4.0
 backoff==2.2.1
 bcrypt==5.0.0
 beautifulsoup4==4.14.3
+blinker==1.9.0
 boto3==1.42.9
 botocore==1.42.9
 bs4==0.0.2
@@ -17,13 +20,19 @@ charset-normalizer==3.4.4
 chromadb==1.3.7
 click==8.3.1
 coloredlogs==15.0.1
+contourpy==1.3.3
+cycler==0.12.1
 dataclasses-json==0.6.7
 distro==1.9.0
 durationpy==0.10
+fastapi==0.125.0
 filelock==3.20.0
 flatbuffers==25.9.23
+fonttools==4.61.1
 frozenlist==1.8.0
 fsspec==2025.12.0
+gitdb==4.0.12
+GitPython==3.1.45
 google-auth==2.43.0
 googleapis-common-protos==1.72.0
 greenlet==3.3.0
@@ -40,11 +49,13 @@ idna==3.11
 importlib_metadata==8.7.0
 importlib_resources==6.5.2
 iniconfig==2.3.0
+Jinja2==3.1.6
 jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
+kiwisolver==1.4.9
 kubernetes==34.1.0
 langchain==1.1.3
 langchain-chroma==1.1.0
@@ -59,12 +70,15 @@ langgraph-prebuilt==1.0.5
 langgraph-sdk==0.3.0
 langsmith==0.4.59
 markdown-it-py==4.0.0
+MarkupSafe==3.0.3
 marshmallow==3.26.1
+matplotlib==3.10.8
 mdurl==0.1.2
 mmh3==5.2.0
 mpmath==1.3.0
 multidict==6.7.0
 mypy_extensions==1.1.0
+narwhals==2.14.0
 numpy==2.3.5
 oauthlib==3.3.1
 ollama==0.6.1
@@ -79,23 +93,29 @@ orjson==3.11.5
 ormsgpack==1.12.0
 overrides==7.7.0
 packaging==25.0
+pandas==2.3.3
+pillow==12.0.0
 pluggy==1.6.0
 posthog==5.4.0
 propcache==0.4.1
 protobuf==6.33.2
+pyarrow==22.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pybase64==1.4.3
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
+pydeck==0.9.1
 Pygments==2.19.2
+pyparsing==3.2.5
 pypdf==6.4.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 pytest==9.0.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+pytz==2025.2
 PyYAML==6.0.3
 referencing==0.37.0
 requests==2.32.5
@@ -107,21 +127,28 @@ rsa==4.9.1
 s3transfer==0.16.0
 shellingham==1.5.4
 six==1.17.0
+smmap==5.0.2
 soupsieve==2.8
 SQLAlchemy==2.0.45
+starlette==0.50.0
+streamlit==1.52.2
 sympy==1.14.0
 tenacity==9.1.2
 tokenizers==0.22.1
+toml==0.10.2
+tornado==6.5.4
 tqdm==4.67.1
 typer==0.20.0
 typer-slim==0.20.0
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.3
 urllib3==2.3.0
 uuid_utils==0.12.0
 uvicorn==0.38.0
 uvloop==0.22.1
+watchdog==6.0.0
 watchfiles==1.1.1
 websocket-client==1.9.0
 websockets==15.0.1
